Removed use of Java deprecated API.