@@ -532,7 +532,7 @@ public class ResizableDoubleArrayTest {
 
         // Wrong type
         ResizableDoubleArray first = new ResizableDoubleArray();
-        Double other = new Double(2);
+        Double other = Double.valueOf(2);
         assertFalse(first.equals(other));
 
         // Null
